Fix layout issues by changing size % to px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,11 @@ h2 {
 h3 {
     text-align: center;
     text-decoration: underline;
-    padding: 1%;
+    padding: 3px;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-family: courgette, sans-serif;
     text-transform: lowercase;
     letter-spacing: 2px;
@@ -52,11 +53,11 @@ h1, h2 {
 #menu li {
     float: right;
     list-style-type: none;
-    padding: 1%;
+    padding: 10px;
 }
 
 li a {
-    color:#ddfada;
+    color: #ddfada;
 }
 
 header {
@@ -91,9 +92,12 @@ nav .active {
 
 .history {
     font-size: 20px;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding: 20px 50px 20px 50px;
     text-align: center;
+}
+
+.history h2 {
+    padding-bottom: 10px;
 }
 
 /* footer */
@@ -103,7 +107,7 @@ footer {
     text-align: center;
     background-color: #000000;
     width: 100%;
-    height: 10%;
+    height: 60px;
 }
 
 footer li {
@@ -116,7 +120,7 @@ footer li {
 /* types of meditation */
 
 #information {
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 .types-heading {
@@ -131,15 +135,15 @@ footer li {
 }
 
 .meditation-types {
-       font-size: 20px;
-       padding: 10px 20px 10px 20px;
-       text-align: center;
+    font-size: 20px;
+    padding: 20px 50px 20px 50px;
+    text-align: center;
 }
 
 .meditation-list {
     font-size: 20px;
     list-style-type: circle;
-    padding-left: 45%;
+    padding-left: 600px;
 }
 
 /* get involved page */
@@ -147,7 +151,7 @@ footer li {
 .sub-heading {
     text-align: center;
     text-decoration: underline;
-    padding: 1%;
+    padding: 3px;
 }
 
 /* video */
@@ -169,7 +173,8 @@ audio {
 .feedback-section {
     background-color: #dbfada;
     width: 100%;
-    height: 700px;
+    height: 750px;
+    padding-top: 20px;
 }
 
 .feedback-form {
@@ -216,4 +221,3 @@ form h2 {
 }
 
 /* media queries */
-
